# cg_coursework

./: .gitignore  CMakeLists.txt  Coursework.sln  Coursework.vcxproj  Coursework.vcxproj.filters
docs/: title page.docx  tz.docx
exampels/: CMakeLists.txt  triangle.cpp
inc/: camera.h  canvas.h  exeptions.h  model.h  polygon_model.h  reader.h  render.h  shaders.h  types.h
shaders/: fragTest.shader  tet.mtl  vertex.shader  vertexTest.shader
src/: camera.cpp  canvas.cpp  main.cpp  model.cpp  polygon_model.cpp  reader.cpp  render.cpp  shaders.cpp
